# bondview

./: .gitignore  AGENTS.md  README.md  module1.py  module1_analysis.py  module1_calculator.py  module1_context.py  module1_diagnostics.py  module1_historical_analysis.py  module1_result.py  module1_schema.py  module1_sensitivity_diagnostics.py  pyproject.toml  requirements.txt
data/: fred_series_config.csv  historical_context.yaml  module1_config.yaml  raw_data_19980101_20260508.csv
docs/: chatgpt_context_bondview.md  module1_stance_score_calculation_logic.md
reports/: 260626_module1_hardcoded_component_scores_audit.md  260626_schema_target_validators_audit.md  260629_module1_rule_score_helper_usage_audit.md  260629_module1_target_bucket_accessors_audit.md  260630_module1_credit_adjustment_j1_audit.md  260630_module1_group_f_diagnostic_contract_audit.md  260630_module1_group_g_stabilization_case_audit.md  260630_module1_group_h_summary_display_audit.md  260630_module1_remaining_cleanup_reclassification_audit.md  260630_module1_state_bucket_classification_audit.md  260701_module1_group_i_schema_parity_audit.md  260701_module1_group_k3_remaining_alias_decision.md  260701_module1_group_k_compat_removal_audit.md  260701_module1_stance_summary_api_audit.md  260701_module1_summarize_stance_logic_deletion_audit.md  260703_module1_optional_adjustment_simple_redesign_audit.md  260703_module1_public_api_audit.md  260703_module1_public_api_stage1b_usage_audit.md  260703_module1_rule_mapped_stability_private_helper_overlap_audit.md  260706_module1_rule_mapped_diagnostics_audit.md  (+19 more)
(+1 files in other folders)
